fixed right extra padding

--- a/src/views/HomePage/Home.css
+++ b/src/views/HomePage/Home.css
@@ -8,7 +8,7 @@
 
 .face {
   margin: 10px;
-  width: 16vh;
+  width: 15vh;
   height: 16vh;
   border-radius: 50%;
 }
@@ -24,7 +24,7 @@
 .home-section {
   z-index: -1;
   background-image: var(--image-gradient), url(../../assets/home-bg.jpg);
-  padding: 42px 0 85px 0;
+  padding: 42px 16px 85px 0;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
